# SAM4Dcap-core

./: .gitignore  LICENSE  README.md  README_SAM4Dcap.md  app.py  main.py  pyproject.toml  utils.py  utilsChecker.py  utilsDetector.py  utilsOpenSim.py
.github/workflows/: ci.yml  publish.yml
MHRtoSMPL/: README.md  SMPL_NEUTRAL.pkl  convert_mhr_to_smpl.py  convert_smpl_chumpy_free.py  render_smpl.py  render_smpl_test.py
Readme_modified/: README.md  check_again.txt  checkpoints.txt
SAM4Dcap/: pipeline1.sh
SAM4Dcap/align/: README.md  generate_aligned_trc.py
SAM4Dcap/align_43marks/: README.md  generate_aligned_trc_43.py  markers_lai_43.yaml
SAM4Dcap/align_43marks/webviz_compare/: index.html
SAM4Dcap/opencap/web/webviz/: index.html
SAM4Dcap/opencap/web/webviz_markerset/: index.html  main.js
SAM4Dcap/opencap_clean/code/: run_subject2_session0_dj1.py
SAM4Dcap/opencap_clean/web/webviz/: style.css
SAM4Dcap/output_viz/vis/: subject2_43markers_aligned.json
SAM4Dcap/output_viz/webviz_pipeline2/: main.js
SAM4Dcap/pipeline1/: _subject.json  merge_to_smpl2ab.py
SAM4Dcap/pipeline2/: run_ik.py  run_prepare_trc.py  run_vis.py
SAM4Dcap/select/: build_scene_updated_mapping.py  export_mapping_csv.py
SAM4Dcap/select/data/: manual_picks_new.json  sym_idxs.npy
SAM4Dcap/select/viewer/: main.js  mapping_43_bsm105_smpl24.csv  scene_manual_picks_overlay.json  scene_subject2_static1_frame1_43markers_compare.json  scene_subject2_static1_frame1_43markers_compare_with_adj.json  scene_subject2_static1_frame1_anchors_compare.json  scene_updated_mapping_overlay.json  style.css
SAM4Dcap/select/viewer/smpl_mapper/: export_smpl_template_mesh.py  (+2 more)
SAM4Dcap_en/: opencap.sh  pipeline2.sh  select.sh
SAM4Dcap_en/align/webviz_compare/: index.html
SAM4Dcap_en/align_43marks/: generate_aligned_trc_43_to_pipeline2.py
SAM4Dcap_en/opencap/code/: prepare_subject2_session0.py
SAM4Dcap_en/output_viz/: web.txt
SAM4Dcap_en/pipeline2/: run_scale.py
SAM4Dcap_en/pipeline2/webviz/: index.html
SAM4Dcap_en/select/: add_adjusted_markers.py  align_smpl_to_markers.py
SAM4Dcap_en/select/data/: updated_mapping.csv
SAM4Dcap_en/select/viewer/: export_osim_markerset_scene.py  export_static_frame_scene.py  index.html  scene_LaiUhlrich2022_generic.json  scene_subject2_static1_frame1.json
configs/: body4d.yaml
eval/: offline_app.py
models/sam_3d_body/notebook/: utils.py
models/sam_3d_body/sam_3d_body/: sam_3d_body_estimator.py
models/sam_3d_body/tools/: vis_utils.py
scripts/: offline_app.py  run_batch.py
scripts/eval/: 3dpw.py  mhr2smpl.py
smpl2ab/: smpl2addbio.py
smpl2ab/utils/: smpl_utils.py
tests/: test_basic.py
tools/mhr_smpl_conversion/: conversion.py  file_assets.py
utils/: __init__.py  image_utils.py  jpg2mp4.py  mask_utils.py  png2mp4.py  yaml_config.py
(+56 files in other folders)
