[project]
authors = [{name = "MHR Contributors"}]
dependencies = ["torch", "trimesh>=4.8.3,<5"]
name = "mhr"
requires-python = ">= 3.11"
dynamic = ["version"]
readme = "README.md"
license = {text = "Apache-2.0"}

[project.optional-dependencies]
test = ["pytest>=8.0"]

[project.urls]
Homepage = "https://github.com/facebookresearch/MHR"
Repository = "https://github.com/facebookresearch/MHR"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "hatch-vcs"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
version_scheme = "post-release"

[tool.hatch.build.hooks.vcs]
version-file = "mhr/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["mhr"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64"]

[tool.pixi.tasks]
test = { cmd = "pytest tests/ -v", description = "Run pytest tests with verbose output" }
wheel-clean = { cmd = "rm -rf dist build *.egg-info", description = "Wheel: Clean build artifacts and distribution files" }
wheel-build = { cmd = "python -m build", description = "Wheel: Build source distribution and wheel package" }
wheel-test = { cmd = "python scripts/test_wheel.py", description = "Wheel: Test built wheel in fresh environment using uv" }
wheel-publish = { cmd = "twine upload --repository mhr dist/*", description = "Wheel: Publish wheel package to PyPI" }

[tool.pixi.pypi-dependencies]
pytest = ">=8.0"
build = ">=1.0"
twine = ">=5.0"
uv = ">=0.5.0"
hatchling = "*"
hatch-vcs = "*"

[tool.pixi.dependencies]
pymomentum = ">=0.1.90"

[tool.pixi.feature.py312.dependencies]
python = "3.12.*"

[tool.pixi.feature.py313.dependencies]
python = "3.13.*"

[tool.pixi.environments]
default = ["py312"]
py312 = ["py312"]
py313 = ["py313"]
